// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots VButton/desktop disabled 1`] = `
<div>
  <table>
    <thead>
      <tr>
        <th />
         
        <th>
          Primary
        </th>
         
        <th>
          Secondary
        </th>
         
        <th>
          Tertiary
        </th>
         
        <th>
          Quaternary
        </th>
         
        <th>
          Ghost
        </th>
      </tr>
    </thead>
     
    <tbody>
      <tr>
        <th
          scope="row"
        >
          Normal
        </th>
         
        <td>
          <button
            class="v-button theme-default skin-primary size-normal"
            disabled="disabled"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-secondary size-normal"
            disabled="disabled"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-tertiary size-normal"
            disabled="disabled"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-quaternary size-normal"
            disabled="disabled"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-ghost size-normal"
            disabled="disabled"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
      </tr>
       
      <tr>
        <th
          scope="row"
        >
          Big
        </th>
         
        <td>
          <button
            class="v-button theme-default skin-primary size-big"
            disabled="disabled"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-secondary size-big"
            disabled="disabled"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-tertiary size-big"
            disabled="disabled"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-quaternary size-big"
            disabled="disabled"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-ghost size-big"
            disabled="disabled"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots VButton/desktop enabled 1`] = `
<div>
  <table>
    <thead>
      <tr>
        <th />
         
        <th>
          Primary
        </th>
         
        <th>
          Secondary
        </th>
         
        <th>
          Tertiary
        </th>
         
        <th>
          Quaternary
        </th>
         
        <th>
          Ghost
        </th>
      </tr>
    </thead>
     
    <tbody>
      <tr>
        <th
          scope="row"
        >
          Normal
        </th>
         
        <td>
          <button
            class="v-button theme-default skin-primary size-normal"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-secondary size-normal"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-tertiary size-normal"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-quaternary size-normal"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-ghost size-normal"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
      </tr>
       
      <tr>
        <th
          scope="row"
        >
          Big
        </th>
         
        <td>
          <button
            class="v-button theme-default skin-primary size-big"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-secondary size-big"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-tertiary size-big"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-quaternary size-big"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-ghost size-big"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots VButton/desktop icon 1`] = `
<div>
  <table>
    <thead>
      <tr>
        <th />
         
        <th>
          Primary
        </th>
         
        <th>
          Secondary
        </th>
         
        <th>
          Tertiary
        </th>
         
        <th>
          Quaternary
        </th>
         
        <th>
          Ghost
        </th>
      </tr>
    </thead>
     
    <tbody>
      <tr>
        <th
          scope="row"
        >
          Normal
        </th>
         
        <td>
          <button
            class="v-button theme-default skin-primary size-normal"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label 
            </span>
             
            <i
              class="v-button-icon icon-after theme-default"
            >
              <svg
                class="v-svg-icon"
              >
                <use
                  xlink:href="img/icons.svg#icon-action"
                />
              </svg>
            </i>
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-secondary size-normal"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label 
            </span>
             
            <i
              class="v-button-icon icon-after theme-default"
            >
              <svg
                class="v-svg-icon"
              >
                <use
                  xlink:href="img/icons.svg#icon-action"
                />
              </svg>
            </i>
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-tertiary size-normal"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label 
            </span>
             
            <i
              class="v-button-icon icon-after theme-default"
            >
              <svg
                class="v-svg-icon"
              >
                <use
                  xlink:href="img/icons.svg#icon-action"
                />
              </svg>
            </i>
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-quaternary size-normal"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label 
            </span>
             
            <i
              class="v-button-icon icon-after theme-default"
            >
              <svg
                class="v-svg-icon"
              >
                <use
                  xlink:href="img/icons.svg#icon-action"
                />
              </svg>
            </i>
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-ghost size-normal"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label 
            </span>
             
            <i
              class="v-button-icon icon-after theme-default"
            >
              <svg
                class="v-svg-icon"
              >
                <use
                  xlink:href="img/icons.svg#icon-action"
                />
              </svg>
            </i>
          </button>
        </td>
      </tr>
       
      <tr>
        <th
          scope="row"
        >
          Big
        </th>
         
        <td>
          <button
            class="v-button theme-default skin-primary size-big"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label 
            </span>
             
            <i
              class="v-button-icon icon-after theme-default"
            >
              <svg
                class="v-svg-icon"
              >
                <use
                  xlink:href="img/icons.svg#icon-action"
                />
              </svg>
            </i>
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-secondary size-big"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label 
            </span>
             
            <i
              class="v-button-icon icon-after theme-default"
            >
              <svg
                class="v-svg-icon"
              >
                <use
                  xlink:href="img/icons.svg#icon-action"
                />
              </svg>
            </i>
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-tertiary size-big"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label 
            </span>
             
            <i
              class="v-button-icon icon-after theme-default"
            >
              <svg
                class="v-svg-icon"
              >
                <use
                  xlink:href="img/icons.svg#icon-action"
                />
              </svg>
            </i>
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-quaternary size-big"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label 
            </span>
             
            <i
              class="v-button-icon icon-after theme-default"
            >
              <svg
                class="v-svg-icon"
              >
                <use
                  xlink:href="img/icons.svg#icon-action"
                />
              </svg>
            </i>
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-ghost size-big"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label 
            </span>
             
            <i
              class="v-button-icon icon-after theme-default"
            >
              <svg
                class="v-svg-icon"
              >
                <use
                  xlink:href="img/icons.svg#icon-action"
                />
              </svg>
            </i>
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots VButton/desktop social 1`] = `
<div>
  <table>
    <thead>
      <tr>
        <th />
         
        <th>
          Google
        </th>
         
        <th>
          GitHub
        </th>
      </tr>
    </thead>
     
    <tbody>
      <tr>
        <th
          scope="row"
        >
          Normal
        </th>
         
        <td>
          <button
            class="v-button theme-default skin-social size-normal"
            style="width: 181px;"
          >
            <i
              class="v-button-icon icon-before theme-default"
            >
              <svg
                class="v-svg-icon"
                style="margin-right: 5px;"
              >
                <use
                  xlink:href="img/icons.svg#icon-google"
                />
              </svg>
            </i>
             
            <span
              class="v-button-label"
            >
               Google
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-social size-normal"
            style="width: 181px;"
          >
            <i
              class="v-button-icon icon-before theme-default"
            >
              <svg
                class="v-svg-icon"
                style="margin-right: 5px;"
              >
                <use
                  xlink:href="img/icons.svg#icon-github"
                />
              </svg>
            </i>
             
            <span
              class="v-button-label"
            >
               GitHub
            </span>
             
            <!---->
          </button>
        </td>
      </tr>
       
      <tr>
        <th
          scope="row"
        >
          Big
        </th>
         
        <td>
          <button
            class="v-button theme-default skin-social size-big"
            style="width: 181px;"
          >
            <i
              class="v-button-icon icon-before theme-default"
            >
              <svg
                class="v-svg-icon"
                style="margin-right: 5px;"
              >
                <use
                  xlink:href="img/icons.svg#icon-google"
                />
              </svg>
            </i>
             
            <span
              class="v-button-label"
            >
               Google
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-social size-big"
            style="width: 181px;"
          >
            <i
              class="v-button-icon icon-before theme-default"
            >
              <svg
                class="v-svg-icon"
                style="margin-right: 5px;"
              >
                <use
                  xlink:href="img/icons.svg#icon-github"
                />
              </svg>
            </i>
             
            <span
              class="v-button-label"
            >
               GitHub
            </span>
             
            <!---->
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots VButton/desktop state 1`] = `
<div>
  <table>
    <thead>
      <tr>
        <th />
         
        <th>
          Success
        </th>
         
        <th>
          Error
        </th>
      </tr>
    </thead>
     
    <tbody>
      <tr>
        <th
          scope="row"
        >
          Normal
        </th>
         
        <td>
          <button
            class="v-button theme-default skin-success size-normal"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-error size-normal"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
      </tr>
       
      <tr>
        <th
          scope="row"
        >
          Big
        </th>
         
        <td>
          <button
            class="v-button theme-default skin-success size-big"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
         
        <td>
          <button
            class="v-button theme-default skin-error size-big"
          >
            <!---->
             
            <span
              class="v-button-label"
            >
              Button Label
            </span>
             
            <!---->
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots VCheckbox/desktop array 1`] = `
<div>
  <label
    class="v-checkbox theme-default"
  >
    <i
      class="v-checkbox-icon theme-default"
    />
     
    <input
      class="v-checkbox-control"
      name="Name"
      type="checkbox"
      value="Crypto!"
    />
     
    <span
      class="v-checkbox-label"
    >
      
          with Crypto!
        
    </span>
  </label>
   
  <br />
  
        persons: Bob, Alice
      
</div>
`;

exports[`Storyshots VCheckbox/desktop default state 1`] = `
<div>
  <label
    class="v-checkbox theme-default"
  >
    <i
      class="v-checkbox-icon theme-default"
    />
     
    <input
      class="v-checkbox-control"
      name="Name"
      type="checkbox"
      value="false"
    />
     
    <span
      class="v-checkbox-label"
    >
      
          state: 
        
    </span>
  </label>
</div>
`;

exports[`Storyshots VCheckbox/desktop default state false 1`] = `
<div>
  <label
    class="v-checkbox theme-default"
  >
    <i
      class="v-checkbox-icon theme-default"
    />
     
    <input
      class="v-checkbox-control"
      name="checkbox"
      type="checkbox"
      value="false"
    />
     
    <span
      class="v-checkbox-label"
    >
      
          Checkbox item
        
    </span>
  </label>
   
  <div>
    state: false
  </div>
</div>
`;

exports[`Storyshots VCheckbox/desktop default state true 1`] = `
<div>
  <label
    class="v-checkbox theme-default"
  >
    <i
      class="v-checkbox-icon theme-default"
    />
     
    <input
      class="v-checkbox-control"
      name="checkbox"
      type="checkbox"
      value="true"
    />
     
    <span
      class="v-checkbox-label"
    >
      
          state: true
        
    </span>
  </label>
</div>
`;

exports[`Storyshots VCheckbox/desktop disabled 1`] = `
<div>
  <label
    class="v-checkbox theme-default is-disabled"
  >
    <i
      class="v-checkbox-icon theme-default"
    />
     
    <input
      class="v-checkbox-control"
      disabled="disabled"
      name="checkbox"
      type="checkbox"
      value="false"
    />
     
    <span
      class="v-checkbox-label"
    >
      
          disabled
        
    </span>
  </label>
   
  <div />
   
  <label
    class="v-checkbox theme-default is-checked is-disabled"
  >
    <i
      class="v-checkbox-icon theme-default"
    />
     
    <input
      class="v-checkbox-control"
      disabled="disabled"
      name="checkbox"
      type="checkbox"
      value="false"
    />
     
    <span
      class="v-checkbox-label"
    >
      
          disabled
        
    </span>
  </label>
</div>
`;

exports[`Storyshots VCheckbox/desktop error 1`] = `
<div>
  <label
    class="v-checkbox theme-default is-error"
  >
    <i
      class="v-checkbox-icon theme-default"
    />
     
    <input
      class="v-checkbox-control is-danger"
      name="checkbox"
      type="checkbox"
      value="false"
    />
     
    <span
      class="v-checkbox-label"
    >
      
          is-error
        
    </span>
  </label>
</div>
`;

exports[`Storyshots VCheckbox/desktop true/false attr 1`] = `
<div>
  <label
    class="v-checkbox theme-default"
  >
    <i
      class="v-checkbox-icon theme-default"
    />
     
    <input
      class="v-checkbox-control"
      name="Name"
      type="checkbox"
      value="false"
    />
     
    <span
      class="v-checkbox-label"
    >
      
          state: 
        
    </span>
  </label>
</div>
`;

exports[`Storyshots VContentSwitcher/desktop array objects 1`] = `
<div>
  <ul
    class="v-content-switcher theme-default"
  >
    <li
      class="v-content-switcher-item is-checked"
    >
      <label
        class="v-content-switcher-label"
      >
        
      Left section
      
        <input
          class="v-content-switcher-control"
          type="radio"
          value="0"
        />
      </label>
    </li>
    <li
      class="v-content-switcher-item"
    >
      <label
        class="v-content-switcher-label"
      >
        
      Middle section
      
        <input
          class="v-content-switcher-control"
          type="radio"
          value="1"
        />
      </label>
    </li>
    <li
      class="v-content-switcher-item"
    >
      <label
        class="v-content-switcher-label"
      >
        
      Middle section
      
        <input
          class="v-content-switcher-control"
          type="radio"
          value="2"
        />
      </label>
    </li>
    <li
      class="v-content-switcher-item"
    >
      <label
        class="v-content-switcher-label"
      >
        
      Right section
      
        <input
          class="v-content-switcher-control"
          type="radio"
          value="3"
        />
      </label>
    </li>
  </ul>
   
  <div>
    state: 0
  </div>
</div>
`;

exports[`Storyshots VContentSwitcher/desktop simple array strings 1`] = `
<div>
  <ul
    class="v-content-switcher theme-default"
  >
    <li
      class="v-content-switcher-item"
    >
      <label
        class="v-content-switcher-label"
      >
        
      Left section
      
        <input
          class="v-content-switcher-control"
          type="radio"
          value="Left section"
        />
      </label>
    </li>
    <li
      class="v-content-switcher-item"
    >
      <label
        class="v-content-switcher-label"
      >
        
      Middle section
      
        <input
          class="v-content-switcher-control"
          type="radio"
          value="Middle section"
        />
      </label>
    </li>
    <li
      class="v-content-switcher-item"
    >
      <label
        class="v-content-switcher-label"
      >
        
      Right section
      
        <input
          class="v-content-switcher-control"
          type="radio"
          value="Right section"
        />
      </label>
    </li>
  </ul>
   
  <div>
    state: 
  </div>
</div>
`;

exports[`Storyshots VInput/desktop disabled 1`] = `
<div>
  <div
    class="v-field-atom theme-default"
    style="width: 288px;"
  >
    <label
      class="v-input-label-atom theme-default is-muted"
    >
      
  Label

    </label>
     
    <div
      class="v-description-atom theme-default is-muted"
    >
      
  Helper text goes here

    </div>
     
    <span
      class="v-input-atom theme-default is-disabled"
    >
      <input
        class="v-input-atom-control"
        disabled="disabled"
        placeholder="Placeholder text"
      />
       
    </span>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots VInput/desktop enabled 1`] = `
<div>
  <div
    class="v-field-atom theme-default"
    style="width: 288px;"
  >
    <label
      class="v-input-label-atom theme-default"
    >
      
  Label

    </label>
     
    <div
      class="v-description-atom theme-default"
    >
      
  Helper text goes here

    </div>
     
    <span
      class="v-input-atom theme-default"
    >
      <input
        class="v-input-atom-control"
        placeholder="Placeholder text"
      />
       
    </span>
     
    <!---->
  </div>
  
        
      
</div>
`;

exports[`Storyshots VInput/desktop error 1`] = `
<div>
  <div
    class="v-field-atom theme-default"
    style="width: 288px;"
  >
    <label
      class="v-input-label-atom theme-default"
    >
      
  Label

    </label>
     
    <div
      class="v-description-atom theme-default"
    >
      
  Helper text goes here

    </div>
     
    <span
      class="v-input-atom theme-default is-error"
    >
      <input
        class="v-input-atom-control"
        placeholder="Placeholder text"
      />
       
      <i
        class="v-input-atom-error theme-default"
      >
        
      !
    
      </i>
    </span>
     
    <div
      class="v-error-atom theme-default"
    >
      
  Error message here

    </div>
  </div>
</div>
`;

exports[`Storyshots VModal/desktop enabled 1`] = `
<div>
  <div
    class="v-modal-mask theme-default"
  >
    <!---->
     
    <div
      class="v-modal-container"
    >
      <div
        class="v-modal-controls"
      >
        <button
          class="v-modal-back"
        >
          <svg
            fill="none"
            height="17"
            viewBox="0 0 23 17"
            width="23"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21.5 8.5H1.5"
              stroke="#111111"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-miterlimit="10"
              stroke-width="1.5"
            />
             
            <path
              d="M8.5 15.5L1.5 8.5L8.5 1.5"
              stroke="#111111"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-miterlimit="10"
              stroke-width="1.5"
            />
          </svg>
        </button>
         
        <button
          class="v-modal-close"
        >
          <svg
            fill="none"
            height="17"
            viewBox="0 0 17 17"
            width="17"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.5 1.5L1.5 15.5"
              stroke="#242A2E"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-miterlimit="10"
              stroke-width="1.5"
            />
             
            <path
              d="M15.5 15.5L1.5 1.5"
              stroke="#242A2E"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-miterlimit="10"
              stroke-width="1.5"
            />
          </svg>
        </button>
      </div>
       
      <header
        class="v-modal-header"
      >
        <h3
          class="v-modal-title"
        >
          Modal title
        </h3>
      </header>
       
      <main
        class="v-modal-body"
      >
        
          Modal body
          
      </main>
       
      <footer>
        Modal footer
      </footer>
    </div>
  </div>
</div>
`;
